# test-axum-login

server/: .env.example  Cargo.toml
server/api/: Cargo.toml
server/api/src/: app.rs  db.rs  graphql.rs  lib.rs
server/api/src/auth/: error.rs  google.rs  mod.rs  session.rs
server/api/src/entities/: mod.rs  prelude.rs  providers.rs  users.rs
server/api/src/routes/: auth.rs  protected.rs
server/migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20240314_153335_create_provider_table.rs
server/src/: main.rs
